--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Nikhil Tripathi",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^5.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.10.5",
